=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.2
 - Fixed: [ 2801382 ] Fatal error: Uncaught exception 'PDOException'  (windmillway)
 - Added: [ 2741685 ] SQL Version Update (fisharebest)
 - Fixed: [ 1479083 ] 4b07 - malformed links generated (fisharebest)
 - Fixed: [ 1767948 ] FAQ header doesn't like quotes upon edit (fisharebest)
 - Fixed: [ 2231897 ] [416pre] - Add GEDCOM ... Default person (fisharebest)
 - Fixed: [ 1783041 ] (4.1)  Unable to find record with ID (fisharebest)
 - Changed: Fixed error occurring in inverselink.php, Changed "add" simplyxxx theme icons for clarity, small language change (windmillway)
 - Added [ 1209782 ] Top Down pedigree tree (wooc)
 - Changed: Various core files in preparation for GEDFact_assistant/MEDIA/ module (windmillway)
 - Changed: Placed restriction on GEDFact_assistant/MEDIA/ to be PGV_USER_GEDCOM_ADMIN only (windmillway)
 - Fixed: [ 2786280 ] 4.2.1 search results in families have duplication (fisharebest)
 - Fixed: [ 2790245 ] link error in standard theme (fisharebest)
 - Changed - Various core files in preparation for GEDFact_assistant module (windmillway)
 - Changed Move various media "thumbnails" to the "index/media" subdirectory (canajun2eh)
 - Fixed Text media items not being displayed properly with Lightbox. (windmillway)
 - Fixed [ 2789308 ] ERROR 8: Constant PGV_GOOGLE_ANALYTICS already defined (fisharebest)
 - Fixed Errors on Album page and Reorder Media page highlighted by introduction of PDO parameters (windmillway)
 - Added Comment field to "Banned by IP" and "Search engine by IP" lists on Manage Servers page (canajun2eh)
 - Fixed [ 2779222 ] Adding a wrong date destroys all individual lists (fisharebest)
 - Fixed [ 2780483 ] nick name ordering error/mess (fisharebest)